syntax = "proto3";

package com.tservice.proto.tservice;

option java_multiple_files = true;

import "google/protobuf/empty.proto";

service TserviceService {
  rpc create(CreateProto) returns (TserviceProto);
  rpc update(UpdateProto) returns (TserviceProto);
  rpc delete(DeleteProto) returns (google.protobuf.Empty);
  rpc findById(FindByIdProto) returns (TserviceProto);
  rpc findAll(FindAllProto) returns (stream TserviceProto);
  rpc findByName(FindByNameProto) returns (stream TserviceProto);
  rpc findByValue(FindByValueProto) returns (stream TserviceProto);
}

message TserviceProto {
  string id = 1;
  string name = 2;
  string value = 3;
}

message CreateProto {
  string name = 1;
  string value = 2;
}

message UpdateProto {
  string id = 1;
  string name = 2;
  string value = 3;
}

message DeleteProto {
  string id = 1;
}

message FindByIdProto {
  string id = 1;
}

message FindAllProto {
}

message FindByNameProto {
  string name = 1;
}

message FindByValueProto {
  string value = 1;
}
